--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Milliano</title>
     <link href="https://fonts.googleapis.com/css?family=Baloo+Da+2|Gotu&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./Css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0  shrink-to-fit=no">
     <meta name="description" content="Adeleye Taiwo Hassan (MILLIANOLAT)">
     <meta name="keywords" content="MillianoLat portfolio, portfolio, adeleye taiwo resume">
