--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
         <span onclick="scrollToView('scrolltoHome')" class="icon-arrow-up2 pageTop"></span>
     </div>
 
-    <script src="./javaScript/porto.js"></script>
+    <script src="./javascript/porto.js"></script>
 </body>
 </body>
 
