--- a/about.html
+++ b/about.html
@@ -232,7 +232,7 @@
     </div>
 
     <!-- Some lazy javaScript code -->
-    <script src="./javaScript/porto.js"></script>
+    <script src="./javascript/porto.js"></script>
 </body>
 </body>
 
