--- a/portfolio.html
+++ b/portfolio.html
@@ -305,7 +305,7 @@
     </div>
 
     <!-- Some lazy javaScript code -->
-    <script src="./javaScript/porto.js "></script>
+    <script src="./javascript/porto.js "></script>
 </body>
 </body>
 
