--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div>
             <p>A Web Developer, Philiantropist, Movie lover, And the
-                <span class="big">Founder</span> Of <mark><a href="http://www.google.com">Milliano Drycleaning Services.</a></mark></p>
+                <span class="big">Founder</span> Of <mark><a href="http://www.google.com">Founder of Millianolat.</a></mark></p>
         </div>
         <div>
             <button class="button" type="button" name="button"><a onclick="scrollToView('scrollToMoreOnMe')">More On Me</a></button>
@@ -143,7 +143,7 @@
                     </div>
                     <div>
                         <p class="descriptionText">
-                            A dry cleaning service company website
+                             millianolat service company website
                         </p>
                         <div>
                             <button class="button" type="button" name="button">Visit Site</button>
