--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div class=" productDescription">
                 <div class='liner rel'>
                     <div>
-                        <h1 class="heading">Miliano<span class="highlight block">Dry Cleaners</span></h1>
+                        <h1 class="heading">Milianolat<span class="highlight block">service company website</span></h1>
                     </div>
                     <div>
                         <p class="descriptionText">
