--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <span>
                   <button onclick="scrollToView('scrollToContact')" class="smallButton" type="button" name="button">Hire Me</button>
                   <button title="Download CV" class="smallButton2" type="button" name="button">
-                      <a href="./images/b.jpg">Preview Cv</a>
+                      <a href="./images/cv.png">Preview Cv</a>
                   </button>
                 </span>
                     </div>
